--- a/code/config.ini
+++ b/code/config.ini
@@ -1,22 +1,25 @@
 [PROJECT]
 DIR=/media/sreenivas/Data/UMASS/Thesis/
 
+
+[EXPERIMENT]
+NAME=MyFirstExperiment
+
+
+
 [ADOBE_DATA]
 PATH=data/DeepVideoDeblurring_Dataset_Original_High_FPS_Videos/original_high_fps_videos/
-H_IMG=576
-W_IMG=1024
-
+H = 320
+W = 640
 
 [TRAIN]
-BATCH_SIZE = 3
-N_FRAMES = 3
+N_FRAMES = 60
 N_EPOCHS = 500
 LEARNING_RATE=0.0001
 LR_PERIOD=200
+SAVE_EVERY=10
 LR_DECAY=0.1
-
-H=448
-W=1024
+T_INTERP=0.5
 
 LAMBDA_R=0.8
 ; reconstruction loss weighting
@@ -30,5 +33,15 @@ LAMBDA_S=1.0
 LAMBDA_P=0.005
 ; perceptual loss weighting
 
+[VAL]
+N_FRAMES=30
+
 [STAGE1]
 WEIGHTS=weights/pwc_net.pth.tar
+LOADPREV=TRUE
+FREEZE=TRUE
+
+[STAGE2]
+WEIGHTS=
+LOADPREV=FALSE
+FREEZE=FALSE
