Implement multi-gpu support.

--- a/code/config.ini
+++ b/code/config.ini
@@ -38,7 +38,7 @@ BATCH_SIZE=12
 [STAGE1]
 MODEL=PWC
 ; PWC or UNET
-WEIGHTS=weights/pwc_net.pth.tar
+WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/weights/pwc_net.pth.tar
 LOADPREV=TRUE
 FREEZE=TRUE
 
