--- a/code/config.ini
+++ b/code/config.ini
@@ -11,11 +11,11 @@ H = 320
 W = 640
 
 [TRAIN]
-BATCH_SIZE=12
-N_EPOCHS = 500
+BATCH_SIZE=32
+N_EPOCHS = 50
 LEARNING_RATE=0.0001
-LR_PERIOD=200
-SAVE_EVERY=10
+LR_PERIOD=5
+SAVE_EVERY=5
 LR_DECAY=0.1
 T_INTERP=0.5
 
@@ -32,7 +32,7 @@ LAMBDA_P=0.005
 ; perceptual loss weighting
 
 [VAL]
-BATCH_SIZE=12
+BATCH_SIZE=32
 
 
 [STAGE1]
@@ -46,3 +46,6 @@ FREEZE=TRUE
 WEIGHTS=
 LOADPREV=FALSE
 FREEZE=FALSE
+
+[MISC]
+N_WORKERS=12
