--- a/code/config.ini
+++ b/code/config.ini
@@ -8,7 +8,7 @@ H = 320
 W = 640
 
 [TRAIN]
-BATCH_SIZE=8
+BATCH_SIZE=12
 N_EPOCHS=500
 LEARNING_RATE=0.0001
 LR_PERIOD=200
@@ -19,30 +19,30 @@ T_INTERP=0.5
 LAMBDA_R=0.8
 ; reconstruction loss weighting
 
-LAMBDA_W=0.4
+LAMBDA_W=0.3
 ; warp loss weighting
 
 LAMBDA_S=0
 ; smoothness loss weighting
 
-LAMBDA_P=0.005
+LAMBDA_P=0.015
 ; perceptual loss weighting
 
 [VAL]
-BATCH_SIZE=8
+BATCH_SIZE=12
 
 
 [STAGE1]
-MODEL=UNET
+MODEL=PWC
 ; PWC or UNET
-WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex12_FullRun_04Nov_094527/checkpoints/Ex12_FullRun_04Nov_094527_EPOCH_0200.pt
+WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/weights/pwc_net.pth.tar
 LOADPREV=TRUE
 FREEZE=TRUE
 
 [STAGE2]
-WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex12_FullRun_04Nov_094527/checkpoints/Ex12_FullRun_04Nov_094527_EPOCH_0200.pt
-LOADPREV=TRUE
-FREEZE=TRUE
+WEIGHTS=
+LOADPREV=FALSE
+FREEZE=FALSE
 
 [MISC]
 N_WORKERS=12
@@ -52,4 +52,4 @@ T_SAMPLE=RANDOM
 VALUE=42
 
 [MESSAGE]
-INFO= B=8. Nearly identical to settings given by Huaizu. Random reverse, RANDOM sampling, random rotation. 
+INFO= Ex16 with PWCNet. Default init. Random sample + Random reverse. Lesser rotation. Minor changes to hyperparams.
