--- a/code/config.ini
+++ b/code/config.ini
@@ -8,7 +8,7 @@ H = 320
 W = 640
 
 [TRAIN]
-BATCH_SIZE=12
+BATCH_SIZE=16
 N_EPOCHS=500
 LEARNING_RATE=0.0001
 LR_PERIOD=200
@@ -16,33 +16,37 @@ SAVE_EVERY=50
 LR_DECAY=0.1
 T_INTERP=0.5
 
-LAMBDA_R=0.8
+LAMBDA_R=1
 ; reconstruction loss weighting
 
-LAMBDA_W=0.3
+LAMBDA_W=0.15
 ; warp loss weighting
 
 LAMBDA_S=0
 ; smoothness loss weighting
 
-LAMBDA_P=0.015
+LAMBDA_P=0.02
 ; perceptual loss weighting
 
 [VAL]
-BATCH_SIZE=12
+BATCH_SIZE=16
 
 
 [STAGE1]
-MODEL=PWC
-; PWC or UNET
-WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/weights/pwc_net.pth.tar
-LOADPREV=TRUE
-FREEZE=TRUE
-
-[STAGE2]
+MODEL=UNETC
+; PWC or UNETA or UNETC
 WEIGHTS=
 LOADPREV=FALSE
 FREEZE=FALSE
+
+[STAGE2]
+MODEL=UNETC
+; UNETA or UNETC
+WEIGHTS=
+LOADPREV=FALSE
+FREEZE=FALSE
+CROSS_SKIP=TRUE
+; Skip connections from stage1 encoders to stage2.
 
 [MISC]
 N_WORKERS=12
@@ -52,4 +56,4 @@ T_SAMPLE=RANDOM
 VALUE=42
 
 [MESSAGE]
-INFO= Ex16 with PWCNet. Default init. Random sample + Random reverse. Lesser rotation. Minor changes to hyperparams.
+INFO= UNetC with cross skip connections from stage1 to stage2. B=16, T Random. Multi GPUs. 
