--- a/code/config.ini
+++ b/code/config.ini
@@ -35,16 +35,16 @@ BATCH_SIZE=16
 [STAGE1]
 MODEL=UNETC
 ; PWC or UNETA or UNETC
-WEIGHTS=
-LOADPREV=FALSE
-FREEZE=FALSE
+WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex33_FullRun_26Nov_010723/checkpoints/Ex33_FullRun_26Nov_010723_EPOCH_0150.pt
+LOADPREV=TRUE
+FREEZE=TRUE
 
 [STAGE2]
 MODEL=UNETC
 ; UNETA or UNETC
-WEIGHTS=
-LOADPREV=FALSE
-FREEZE=FALSE
+WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex33_FullRun_26Nov_010723/checkpoints/Ex33_FullRun_26Nov_010723_EPOCH_0150.pt
+LOADPREV=TRUE
+FREEZE=TRUE
 CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 
