Resize inputs to match paper.

--- a/code/config.ini
+++ b/code/config.ini
@@ -8,7 +8,7 @@ H = 320
 W = 640
 
 [TRAIN]
-BATCH_SIZE=16
+BATCH_SIZE=12
 N_EPOCHS=500
 LEARNING_RATE=0.0001
 LR_PERIOD=200
@@ -19,7 +19,7 @@ T_INTERP=0.5
 LAMBDA_R=1
 ; reconstruction loss weighting
 
-LAMBDA_W=0.15
+LAMBDA_W=0.17
 ; warp loss weighting
 
 LAMBDA_S=0
@@ -29,31 +29,31 @@ LAMBDA_P=0.02
 ; perceptual loss weighting
 
 [VAL]
-BATCH_SIZE=16
+BATCH_SIZE=12
 
 
 [STAGE1]
 MODEL=UNETC
 ; PWC or UNETA or UNETC
-WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex33_FullRun_26Nov_010723/checkpoints/Ex33_FullRun_26Nov_010723_EPOCH_0150.pt
-LOADPREV=TRUE
-FREEZE=TRUE
+WEIGHTS=
+LOADPREV=FALSE
+FREEZE=FALSE
 
 [STAGE2]
 MODEL=UNETC
 ; UNETA or UNETC
-WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex33_FullRun_26Nov_010723/checkpoints/Ex33_FullRun_26Nov_010723_EPOCH_0150.pt
-LOADPREV=TRUE
-FREEZE=TRUE
+WEIGHTS=
+LOADPREV=FALSE
+FREEZE=FALSE
 CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 
 [MISC]
 N_WORKERS=12
-T_SAMPLE=RANDOM
+T_SAMPLE=FIXED
 
 [SEED]
 VALUE=42
 
 [MESSAGE]
-INFO= UNetC with cross skip connections from stage1 to stage2. B=16, T Random. Multi GPUs. 
+INFO= UNetC module with cross stage. Warp function fixed. BATCH_SIZE=12, T Fixed. Multi GPUs.  
