Modify Warp loss. Send flow_01, flow_10 also to stage2.

--- a/code/config.ini
+++ b/code/config.ini
@@ -49,11 +49,11 @@ CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 
 [MISC]
-N_WORKERS=12
+N_WORKERS=24
 T_SAMPLE=FIXED
 
 [SEED]
 VALUE=42
 
 [MESSAGE]
-INFO= UNetC module with cross stage. Warp function fixed. BATCH_SIZE=12, T Fixed. Multi GPUs.  
+INFO= BATCH_SIZE=12, T Fixed. Multi GPUs. 352 x 352. 20 channels input to stage 2. Warp loss on stage 1 only.
