Change cv2 to single thread mode. Add pytorch performance tweak.

--- a/code/config.ini
+++ b/code/config.ini
@@ -56,4 +56,4 @@ T_SAMPLE=FIXED
 VALUE=42
 
 [MESSAGE]
-INFO= ConvLSTM version on custom data split. Reverse the CLSTM output in backward direction.
+INFO= ConvLSTM version on custom data split.
