Python3, arbitrary time length input.

--- a/code/config.ini
+++ b/code/config.ini
@@ -2,8 +2,8 @@
 DIR=/home/sreenivasv/CS701/SuperSloMo-PyTorch/
 
 [ADOBE_DATA]
-TRAINPATHS=/mnt/nfs/scratch1/sreenivasv/clstm/train_clips_video_interp_all.txt
-VALPATHS=/mnt/nfs/scratch1/sreenivasv/clstm/val_clips_video_interp_all.txt
+TRAINPATHS=/mnt/nfs/work1/elm/hzjiang/Data/VideoInterpolation/train_3d_clips_video_interp.txt
+VALPATHS=/mnt/nfs/work1/elm/hzjiang/Data/VideoInterpolation/val_3d_clips_video_interp.txt
 H = 352
 W = 352
 
@@ -38,6 +38,7 @@ MODEL=UNETC
 WEIGHTS=
 LOADPREV=FALSE
 FREEZE=FALSE
+CLSTM=TRUE
 
 [STAGE2]
 MODEL=UNETC
@@ -47,6 +48,7 @@ LOADPREV=FALSE
 FREEZE=FALSE
 CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
+CLSTM=TRUE
 
 [MISC]
 N_WORKERS=24
@@ -56,4 +58,4 @@ T_SAMPLE=FIXED
 VALUE=42
 
 [MESSAGE]
-INFO= ConvLSTM version on custom data split.
+INFO=ConvLSTM version on custom data split. No mask in warp. Loss at middle input.
