SuperSloMo-R (ResNet + bottleneck + UNet).

--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -5,8 +5,8 @@ DIR=/home/sreenivasv/CS701/SuperSloMo-PyTorch/
 DATASET=ADOBE
 
 [ADOBE_DATA]
-TRAINPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v3/train_clips_video_interp_all.txt
-VALPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v3/val_clips_video_interp_all.txt
+TRAINPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v4/train_clips_video_interp_all.txt
+VALPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v4/val_clips_video_interp_all.txt
 
 [UCF101]
 ROOT_PATH=/mnt/nfs/scratch1/hzjiang/Data/ucf101/jpgs
@@ -19,7 +19,7 @@ PIXEL_STD=0.229,0.224,0.225
 ; ImageNet
 FCN_TYPE=4s
 FPN_DIM=128
-BOTTLENECK=CGRU
+BOTTLENECK=CONV
 
 [TRAIN]
 BATCH_SIZE=32
@@ -73,11 +73,11 @@ CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 
 [MISC]
-N_WORKERS=12
+N_WORKERS=24
 T_SAMPLE=FIXED
 
 [SEED]
 VALUE=42
 
 [MESSAGE]
-INFO=ResNet+CGRU+UPerNet, N_FRAMES=8
+INFO=ResNet encoder -> CONV -> UNet decoder, N_FRAMES=2.
