Updated ResNetFlow models.

--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -13,13 +13,16 @@ ROOT_PATH=/mnt/nfs/scratch1/hzjiang/Data/ucf101/jpgs
 ANNOTATION_PATH=/home/hzjiang/Code/3D-ResNets-PyTorch/ucfTrainTestlist/ucf101_01.json
 
 [MODEL]
-NORM_TYPE=BN
+NORM_TYPE=GN
+; BN or GN.
 PIXEL_MEAN=0.485,0.456,0.406
 PIXEL_STD=0.229,0.224,0.225
 ; ImageNet
 FCN_TYPE=4s
 FPN_DIM=128
-BOTTLENECK=CONV
+BOTTLENECK=CGRU
+SHORTCUT_TYPE=B
+; A or B. A = AvgPool, B= Conv.
 
 [TRAIN]
 BATCH_SIZE=32
@@ -55,17 +58,15 @@ CROP_IMW=224
 RESIZE_RATIO=1
 
 [STAGE1]
-MODEL=UNETC
-; PWC or UNETA or UNETC or UNETC_GN
 ENCODER=resnet18
+;resnet18 or unet
 WEIGHTS=
 LOADPREV=FALSE
 FREEZE=FALSE
 
 [STAGE2]
-MODEL=UNETC
-; PWC or UNETA or UNETC or UNETC_GN
 ENCODER=resnet18
+;resnet18 or unet
 WEIGHTS=
 LOADPREV=FALSE
 FREEZE=FALSE
