Update paths in config.

--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -5,8 +5,8 @@ DIR=/home/sreenivasv/CS701/SuperSloMo-PyTorch/
 DATASET=ADOBE
 
 [ADOBE_DATA]
-TRAINPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v4/train_clips_video_interp_all.txt
-VALPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v4/val_clips_video_interp_all.txt
+TRAINPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v5/train_clips_video_interp_all.txt
+VALPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v5/val_clips_video_interp_all.txt
 
 [UCF101]
 ROOT_PATH=/mnt/nfs/scratch1/hzjiang/Data/ucf101/jpgs
@@ -20,7 +20,7 @@ PIXEL_STD=0.229,0.224,0.225
 ; ImageNet
 FCN_TYPE=4s
 FPN_DIM=128
-BOTTLENECK=CGRU
+BOTTLENECK=CONV
 SHORTCUT_TYPE=B
 ; A or B. A = AvgPool, B= Conv.
 
@@ -48,7 +48,7 @@ LAMBDA_S=0
 LAMBDA_P=10
 ; perceptual loss weighting
 
-N_FRAMES=8
+N_FRAMES=2
 ; 2, 4, 6, 8 (2 = superslomo) (4, 6, 8 = superslomo-r)
 
 [VAL]
@@ -60,16 +60,16 @@ RESIZE_RATIO=1
 [STAGE1]
 ENCODER=resnet18
 ;resnet18 or unet
-WEIGHTS=
-LOADPREV=FALSE
-FREEZE=FALSE
+WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex07a_SSMR2_20Feb_230420/checkpoints/Ex07a_SSMR2_20Feb_230420_EPOCH_0500.pt
+LOADPREV=TRUE
+FREEZE=TRUE
 
 [STAGE2]
-ENCODER=resnet18
+ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=
-LOADPREV=FALSE
-FREEZE=FALSE
+WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex07a_SSMR2_20Feb_230420/checkpoints/Ex07a_SSMR2_20Feb_230420_EPOCH_0500.pt
+LOADPREV=TRUE
+FREEZE=TRUE
 CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 
