Clean up metrics module. Add Sintel and Slowflow dataset support.

--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -7,6 +7,19 @@ DATASET=ADOBE
 [ADOBE_DATA]
 TRAINPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v5/train_clips_video_interp_all.txt
 VALPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v5/val_clips_video_interp_all.txt
+H_IN=720
+W_IN=1280
+
+[SINTEL_HFR_DATA]
+VALPATHS=/mnt/nfs/scratch1/sreenivasv/ExtraDatasets/Sintel_225.txt
+H_IN=436
+W_IN=1024
+
+[SLOWFLOW_DATA]
+VALPATHS=/mnt/nfs/scratch1/sreenivasv/ExtraDatasets/fastec_57.txt
+H_IN=1024
+W_IN=1280
+
 
 [UCF101]
 ROOT_PATH=/mnt/nfs/scratch1/hzjiang/Data/ucf101/jpgs
@@ -20,7 +33,7 @@ PIXEL_STD=0.229,0.224,0.225
 ; ImageNet
 FCN_TYPE=4s
 FPN_DIM=128
-BOTTLENECK=CONV
+BOTTLENECK=CLSTM
 SHORTCUT_TYPE=B
 ; A or B. A = AvgPool, B= Conv.
 
@@ -48,37 +61,39 @@ LAMBDA_S=0
 LAMBDA_P=10
 ; perceptual loss weighting
 
-N_FRAMES=2
+N_FRAMES=4
 ; 2, 4, 6, 8 (2 = superslomo) (4, 6, 8 = superslomo-r)
 
 [VAL]
-BATCH_SIZE=32
+BATCH_SIZE=8
 CROP_IMH=224
 CROP_IMW=224
 RESIZE_RATIO=1
 
 [STAGE1]
-ENCODER=resnet18
+ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex07a_SSMR2_20Feb_230420/checkpoints/Ex07a_SSMR2_20Feb_230420_EPOCH_0500.pt
-LOADPREV=TRUE
-FREEZE=TRUE
+WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/SSM4_CLSTM_06Feb_192304/checkpoints/SSM4_CLSTM_06Feb_192304_EPOCH_0500.pt
+LOADPREV=TRUE                                                                         
+FREEZE=TRUE                                                                           
 
 [STAGE2]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/Ex07a_SSMR2_20Feb_230420/checkpoints/Ex07a_SSMR2_20Feb_230420_EPOCH_0500.pt
-LOADPREV=TRUE
-FREEZE=TRUE
+WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/SSM4_CLSTM_06Feb_192304/checkpoints/SSM4_CLSTM_06Feb_192304_EPOCH_0500.pt
+LOADPREV=TRUE                                                                         
+FREEZE=TRUE                                                                           
 CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 
 [MISC]
-N_WORKERS=24
-T_SAMPLE=FIXED
+N_WORKERS=12
+T_SAMPLE=NIL
+DATASET=SINTEL_HFR
+; ADOBE, SINTEL, SLOWFLOW
 
 [SEED]
 VALUE=42
 
 [MESSAGE]
-INFO=ResNet encoder -> CONV -> UNet decoder, N_FRAMES=2.
+INFO=UNET CONV UNET N=2. Eval on SINTEL_HFR.
