Add multi-frame support.

--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -73,27 +73,27 @@ RESIZE_RATIO=1
 [STAGE1]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/SSM4_CLSTM_06Feb_192304/checkpoints/SSM4_CLSTM_06Feb_192304_EPOCH_0500.pt
-LOADPREV=TRUE                                                                         
-FREEZE=TRUE                                                                           
+WEIGHTS=
+LOADPREV=FALSE
+FREEZE=FALSE
 
 [STAGE2]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/home/sreenivasv/CS701/SuperSloMo-PyTorch/logs/SSM4_CLSTM_06Feb_192304/checkpoints/SSM4_CLSTM_06Feb_192304_EPOCH_0500.pt
-LOADPREV=TRUE                                                                         
-FREEZE=TRUE                                                                           
+WEIGHTS=
+LOADPREV=FALSE         
+FREEZE=FALSE                                                                  
 CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 
 [MISC]
 N_WORKERS=12
-T_SAMPLE=NIL
-DATASET=SINTEL_HFR
+T_SAMPLE=RANDOM
+DATASET=ADOBE
 ; ADOBE, SINTEL, SLOWFLOW
 
 [SEED]
 VALUE=42
 
 [MESSAGE]
-INFO=UNET CONV UNET N=2. Eval on SINTEL_HFR.
+INFO=UNET CLSTM UNET N=4. Multi-frame.
