Add vimeo+adobe, vimeo loaders. Clean up some scripts.

--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -13,6 +13,14 @@ VALPATHS=/mnt/nfs/scratch1/sreenivasv/clstm-v5/val_clips_video_interp_all.txt
 H_IN=720
 W_IN=1280
 
+[VIMEO_DATA]
+ROOTDIR=/mnt/nfs/scratch1/hzjiang/Data/vimeo_septuplet
+TRAINPATHS=/mnt/nfs/scratch1/hzjiang/Data/vimeo_septuplet/sep_trainlist.txt
+VALPATHS=/mnt/nfs/scratch1/hzjiang/Data/vimeo_septuplet/sep_testlist.txt
+H_IN=256
+W_IN=448
+
+
 [NFS_DATA]
 TRAINPATHS=/mnt/nfs/scratch1/sreenivasv/NFS_Dataset/train_clips_video_interp_all.txt
 VALPATHS=/mnt/nfs/scratch1/sreenivasv/NFS_Dataset/val_clips_video_interp_all.txt
@@ -21,11 +29,13 @@ W_IN=1280
 
 
 [SINTEL_HFR_DATA]
+ROOTDIR=/mnt/nfs/work1/elm/hzjiang/Data/VideoInterpolation/Sintel-video-interp/Clips-half-res
 VALPATHS=/mnt/nfs/scratch1/sreenivasv/ExtraDatasets/Sintel_225.txt
 H_IN=436
 W_IN=1024
 
 [SLOWFLOW_DATA]
+ROOTDIR=/mnt/nfs/work1/elm/hzjiang/Data/VideoInterpolation/Fastec-video-interp/Clips-half-res
 VALPATHS=/mnt/nfs/scratch1/sreenivasv/ExtraDatasets/fastec_57.txt
 H_IN=1024
 W_IN=1280
@@ -49,10 +59,10 @@ SHORTCUT_TYPE=B
 
 [TRAIN]
 BATCH_SIZE=16
-N_EPOCHS=500
-LEARNING_RATE=0.0001
-LR_PERIOD=200
-SAVE_EVERY=100
+N_EPOCHS=200
+LEARNING_RATE=0.00001
+LR_PERIOD=50
+SAVE_EVERY=50
 LR_DECAY=0.1
 T_INTERP=0.5
 CROP_IMH=224
@@ -68,14 +78,14 @@ LAMBDA_W=10
 LAMBDA_S=0
 ; smoothness loss weighting
 
-LAMBDA_P=20
+LAMBDA_P=15
 ; perceptual loss weighting
 
 N_FRAMES=4
 ; 2, 4, 6, 8 (2 = superslomo) (4, 6, 8 = superslomo-r)
 
 [VAL]
-BATCH_SIZE=4
+BATCH_SIZE=8
 CROP_IMH=224
 CROP_IMW=224
 RESIZE_RATIO=1
@@ -83,22 +93,22 @@ RESIZE_RATIO=1
 [STAGE1]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/SSM4_MultiB_Model2_06Mar_002131/SSM4_MultiB_Model2_06Mar_002131_EPOCH_0500.pt
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/SSM4_CGRU_MultiB_16Mar_002843/SSM4_CGRU_MultiB_16Mar_002843_EPOCH_0500.pt
 LOADPREV=TRUE
 FREEZE=TRUE
 
 [STAGE2]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/SSM4_MultiB_Model2_06Mar_002131/SSM4_MultiB_Model2_06Mar_002131_EPOCH_0500.pt
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/SSM4_CGRU_MultiB_16Mar_002843/SSM4_CGRU_MultiB_16Mar_002843_EPOCH_0500.pt
 LOADPREV=TRUE
-FREEZE=TRUE                                
+FREEZE=TRUE
 CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 
 [MISC]
 N_WORKERS=12
-T_SAMPLE=NIL
+T_SAMPLE=RANDOM
 DATASET=ADOBE
 ; ADOBE, SINTEL, SLOWFLOW
 
@@ -110,4 +120,4 @@ INTERP_MODE=ALL
 VALUE=42
 
 [MESSAGE]
-INFO=Eval SSM4 without resize. New data loader.
+INFO=SSM4. Vimeo -> Adobe. Start finetune at 1e-5.
