--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -34,6 +34,14 @@ VALPATHS=/mnt/nfs/scratch1/sreenivasv/ExtraDatasets/Sintel_225.txt
 H_IN=436
 W_IN=1024
 
+[SINTEL_EPE_DATA]; only for the EPE metrics.
+ROOTDIR=/mnt/nfs/work1/elm/hzjiang/Data/MPI_Sintel/training
+SETTING=CLEAN
+;FINAL or CLEAN (EPE only)
+H_IN=436
+W_IN=1024
+
+
 [SLOWFLOW_DATA]
 ROOTDIR=/mnt/nfs/work1/elm/hzjiang/Data/VideoInterpolation/Fastec-video-interp/Clips-half-res
 VALPATHS=/mnt/nfs/scratch1/sreenivasv/ExtraDatasets/fastec_57.txt
@@ -58,7 +66,7 @@ SHORTCUT_TYPE=B
 ; A or B. A = AvgPool, B= Conv.
 
 [TRAIN]
-BATCH_SIZE=16
+BATCH_SIZE=1
 N_EPOCHS=200
 LEARNING_RATE=0.00001
 LR_PERIOD=50
@@ -85,7 +93,7 @@ N_FRAMES=4
 ; 2, 4, 6, 8 (2 = superslomo) (4, 6, 8 = superslomo-r)
 
 [VAL]
-BATCH_SIZE=8
+BATCH_SIZE=4
 CROP_IMH=224
 CROP_IMW=224
 RESIZE_RATIO=1
@@ -93,23 +101,23 @@ RESIZE_RATIO=1
 [STAGE1]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/Adobe_FT2_18Mar_073915/Adobe_FT2_18Mar_073915_EPOCH_0100.pt
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/SSM4_Vimeo_Adobe_17Mar_011112/SSM4_Vimeo_Adobe_17Mar_011112_EPOCH_0150.pt
 LOADPREV=TRUE
 FREEZE=TRUE
 
 [STAGE2]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/Adobe_FT2_18Mar_073915/Adobe_FT2_18Mar_073915_EPOCH_0100.pt
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/SSM4_Vimeo_Adobe_17Mar_011112/SSM4_Vimeo_Adobe_17Mar_011112_EPOCH_0150.pt
 LOADPREV=TRUE
 FREEZE=TRUE
 CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 
 [MISC]
-N_WORKERS=12
+N_WORKERS=6
 T_SAMPLE=RANDOM
-DATASET=ADOBE
+DATASET=SINTEL_HFR
 ; ADOBE, SINTEL, SLOWFLOW
 
 [EVAL]
