--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -1,5 +1,5 @@
 [PROJECT]
-DIR=/home/sreenivasv/CS701/SuperSloMo-PyTorch/
+DIR=/home/sreenivasv/CS701/TDA-VideoInterpolation/
 
 [DATA]
 DATASET=ADOBE
@@ -61,15 +61,14 @@ PIXEL_STD=0.229,0.224,0.225
 ; ImageNet
 FCN_TYPE=4s
 FPN_DIM=128
-BOTTLENECK=CLSTM
 SHORTCUT_TYPE=B
 ; A or B. A = AvgPool, B= Conv.
 
 [TRAIN]
-BATCH_SIZE=1
-N_EPOCHS=200
-LEARNING_RATE=0.00001
-LR_PERIOD=50
+BATCH_SIZE=16
+N_EPOCHS=500
+LEARNING_RATE=0.0001
+LR_PERIOD=200
 SAVE_EVERY=50
 LR_DECAY=0.1
 T_INTERP=0.5
@@ -86,7 +85,7 @@ LAMBDA_W=10
 LAMBDA_S=0
 ; smoothness loss weighting
 
-LAMBDA_P=15
+LAMBDA_P=22
 ; perceptual loss weighting
 
 N_FRAMES=4
@@ -101,21 +100,24 @@ RESIZE_RATIO=1
 [STAGE1]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/SSM4_Vimeo_Adobe_17Mar_011112/SSM4_Vimeo_Adobe_17Mar_011112_EPOCH_0150.pt
-LOADPREV=TRUE
-FREEZE=TRUE
+WEIGHTS=
+LOADPREV=FALSE
+FREEZE=FALSE
+BOTTLENECK=CLSTM
 
 [STAGE2]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/SSM4_Vimeo_Adobe_17Mar_011112/SSM4_Vimeo_Adobe_17Mar_011112_EPOCH_0150.pt
-LOADPREV=TRUE
-FREEZE=TRUE
+WEIGHTS=
+LOADPREV=FALSE
+FREEZE=FALSE
 CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
+BOTTLENECK=CONV
+
 
 [MISC]
-N_WORKERS=6
+N_WORKERS=12
 T_SAMPLE=RANDOM
 DATASET=SINTEL_HFR
 ; ADOBE, SINTEL, SLOWFLOW
@@ -128,4 +130,4 @@ INTERP_MODE=ALL
 VALUE=42
 
 [MESSAGE]
-INFO=SSM4. Vimeo -> Adobe. Start finetune at 1e-5.
+INFO=CLSTM in stage 1 only.
