--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -65,7 +65,7 @@ SHORTCUT_TYPE=B
 ; A or B. A = AvgPool, B= Conv.
 
 [TRAIN]
-BATCH_SIZE=16
+BATCH_SIZE=32
 N_EPOCHS=500
 LEARNING_RATE=0.0001
 LR_PERIOD=200
@@ -88,7 +88,7 @@ LAMBDA_S=0
 LAMBDA_P=22
 ; perceptual loss weighting
 
-N_FRAMES=4
+N_FRAMES=2
 ; 2, 4, 6, 8 (2 = superslomo) (4, 6, 8 = superslomo-r)
 
 [VAL]
@@ -103,7 +103,7 @@ ENCODER=unet
 WEIGHTS=
 LOADPREV=FALSE
 FREEZE=FALSE
-BOTTLENECK=CLSTM
+BOTTLENECK=CONV
 
 [STAGE2]
 ENCODER=unet
@@ -111,7 +111,7 @@ ENCODER=unet
 WEIGHTS=
 LOADPREV=FALSE
 FREEZE=FALSE
-CROSS_SKIP=TRUE
+CROSS_SKIP=FALSE
 ; Skip connections from stage1 encoders to stage2.
 BOTTLENECK=CONV
 
@@ -130,4 +130,4 @@ INTERP_MODE=ALL
 VALUE=42
 
 [MESSAGE]
-INFO=CLSTM in stage 1 only.
+INFO=CONV + CONV. No cross stage. B= 32. Baseline.
