--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -69,11 +69,11 @@ BATCH_SIZE=32
 N_EPOCHS=500
 LEARNING_RATE=0.0001
 LR_PERIOD=200
-SAVE_EVERY=50
+SAVE_EVERY=100
 LR_DECAY=0.1
 T_INTERP=0.5
-CROP_IMH=224
-CROP_IMW=224
+CROP_IMH=256
+CROP_IMW=256
 RESIZE_RATIO=1
 
 LAMBDA_R=60
@@ -92,26 +92,26 @@ N_FRAMES=2
 ; 2, 4, 6, 8 (2 = superslomo) (4, 6, 8 = superslomo-r)
 
 [VAL]
-BATCH_SIZE=4
-CROP_IMH=224
-CROP_IMW=224
+BATCH_SIZE=8
+CROP_IMH=256
+CROP_IMW=256
 RESIZE_RATIO=1
 
 [STAGE1]
 ENCODER=unet
-;resnet18 or unet
-WEIGHTS=
-LOADPREV=FALSE
-FREEZE=FALSE
-BOTTLENECK=CONV
+;resnet18 or unet, PWC
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/Ex01A_TDAVI_07Apr_195341/Ex01A_TDAVI_07Apr_195341_EPOCH_0500.pt
+LOADPREV=TRUE
+FREEZE=TRUE
+BOTTLENECK=CLSTM
 
 [STAGE2]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=
-LOADPREV=FALSE
-FREEZE=FALSE
-CROSS_SKIP=FALSE
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/Ex01A_TDAVI_07Apr_195341/Ex01A_TDAVI_07Apr_195341_EPOCH_0500.pt
+LOADPREV=TRUE
+FREEZE=TRUE
+CROSS_SKIP=TRUE
 ; Skip connections from stage1 encoders to stage2.
 BOTTLENECK=CONV
 
@@ -119,7 +119,7 @@ BOTTLENECK=CONV
 [MISC]
 N_WORKERS=12
 T_SAMPLE=RANDOM
-DATASET=SINTEL_HFR
+DATASET=ADOBE
 ; ADOBE, SINTEL, SLOWFLOW
 
 [EVAL]
@@ -130,4 +130,4 @@ INTERP_MODE=ALL
 VALUE=42
 
 [MESSAGE]
-INFO=CONV + CONV. No cross stage. B= 32. Baseline.
+INFO=Eval SSM CLSTM in stage 1 only.
