--- a/code/configs/ssmr.ini
+++ b/code/configs/ssmr.ini
@@ -65,15 +65,15 @@ SHORTCUT_TYPE=B
 ; A or B. A = AvgPool, B= Conv.
 
 [TRAIN]
-BATCH_SIZE=32
-N_EPOCHS=500
+BATCH_SIZE=48
+N_EPOCHS=200
 LEARNING_RATE=0.0001
-LR_PERIOD=200
-SAVE_EVERY=100
+LR_PERIOD=50
+SAVE_EVERY=50
 LR_DECAY=0.1
 T_INTERP=0.5
-CROP_IMH=256
-CROP_IMW=256
+CROP_IMH=224
+CROP_IMW=224
 RESIZE_RATIO=1
 
 LAMBDA_R=60
@@ -85,14 +85,14 @@ LAMBDA_W=10
 LAMBDA_S=0
 ; smoothness loss weighting
 
-LAMBDA_P=22
+LAMBDA_P=15
 ; perceptual loss weighting
 
 N_FRAMES=2
 ; 2, 4, 6, 8 (2 = superslomo) (4, 6, 8 = superslomo-r)
 
 [VAL]
-BATCH_SIZE=8
+BATCH_SIZE=1
 CROP_IMH=256
 CROP_IMW=256
 RESIZE_RATIO=1
@@ -100,15 +100,15 @@ RESIZE_RATIO=1
 [STAGE1]
 ENCODER=unet
 ;resnet18 or unet, PWC
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/Ex01A_TDAVI_07Apr_195341/Ex01A_TDAVI_07Apr_195341_EPOCH_0500.pt
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/TDAVI_checkpoints/NAV_SSM2_29Sep_190046/NAV_SSM2_29Sep_190046_EPOCH_0150.pt
 LOADPREV=TRUE
 FREEZE=TRUE
-BOTTLENECK=CLSTM
+BOTTLENECK=CONV
 
 [STAGE2]
 ENCODER=unet
 ;resnet18 or unet
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/Ex01A_TDAVI_07Apr_195341/Ex01A_TDAVI_07Apr_195341_EPOCH_0500.pt
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/TDAVI_checkpoints/NAV_SSM2_29Sep_190046/NAV_SSM2_29Sep_190046_EPOCH_0150.pt
 LOADPREV=TRUE
 FREEZE=TRUE
 CROSS_SKIP=TRUE
@@ -119,7 +119,7 @@ BOTTLENECK=CONV
 [MISC]
 N_WORKERS=12
 T_SAMPLE=RANDOM
-DATASET=ADOBE
+DATASET=SLOWFLOW
 ; ADOBE, SINTEL, SLOWFLOW
 
 [EVAL]
@@ -130,4 +130,4 @@ INTERP_MODE=ALL
 VALUE=42
 
 [MESSAGE]
-INFO=Eval SSM CLSTM in stage 1 only.
+INFO=Baseline 2 Frames + CONV eval on Slowflow.
