--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "code/SuperSloMo/models/CLSTM"]
-	path = code/SuperSloMo/models/CLSTM
-	url = https://github.com/SreenivasVRao/ConvLSTM_pytorch.git
+[submodule "scripts/models/CLSTM"]
+	path = scripts/models/CLSTM
+	url = https://github.com/SreenivasVRao/ConvGRU-ConvLSTM-PyTorch
