--- a/configs/superslomo_original.ini
+++ b/configs/superslomo_original.ini
@@ -2,7 +2,7 @@
 DIR=/home/sreenivasv/CS701/VideoInterpolation-PyTorch
 
 [DATA]
-DATASET=SLOWFLOW
+DATASET=ALL
 ; Train = ADOBE, ALL (NFS + ADOBE + VIMEO )
 ; Eval = ADOBE, SINTEL_HFR, SLOWFLOW, VIMEO
 WINDOW_LENGTH=57
@@ -60,7 +60,7 @@ PIXEL_STD=0.229,0.224,0.225
 
 
 [TRAIN]
-CKPT_DIR=/mnt/nfs/scratch1/sreenivasv/VideoInterpolationCheckpoints
+CKPT_DIR=/mnt/nfs/scratch1/sreenivasv/checkpoints
 BATCH_SIZE=32
 N_EPOCHS=200
 LEARNING_RATE=0.0001
@@ -91,7 +91,7 @@ CROP_IMW=256
 [STAGE1]
 ENCODER=UNET
 ;resnet18 or unet, PWC
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/TDAVI_checkpoints/NAV_SSM4_22Sep_205230/NAV_SSM4_22Sep_205230_EPOCH_0150.pt
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/superslomo.pt
 LOADPREV=TRUE
 FREEZE=TRUE
 BOTTLENECK=CONV
@@ -99,7 +99,7 @@ BOTTLENECK=CONV
 [STAGE2]
 ENCODER=UNET
 ;resnet18 or unet
-WEIGHTS=/mnt/nfs/scratch1/sreenivasv/TDAVI_checkpoints/NAV_SSM4_22Sep_205230/NAV_SSM4_22Sep_205230_EPOCH_0150.pt
+WEIGHTS=/mnt/nfs/scratch1/sreenivasv/checkpoints/superslomo.pt
 LOADPREV=TRUE
 FREEZE=TRUE
 BOTTLENECK=CONV
@@ -108,11 +108,12 @@ CROSS_SKIP=TRUE
 
 [DATALOADER]
 N_WORKERS=12
-T_SAMPLE=NIL
-; NIL | RANDOM
+T_SAMPLE=RANDOM
+; NIL when evaluating
+; RANDOM when training.
 
 [EVAL]
-EVAL_MODE=TRUE
+EVAL_MODE=FALSE
 
 [SEED]
 VALUE=42
